	  called command produced text output. The cursor command is now 
	  being reread after an OS command.
	- Solved a bug in LISTing string constants that contained a \. The
	  backslash was not properly escaped...
	- Added PASS as an alias for OS
	- Added KEY$ and INKEY$
	- Added CHDIR, MKDIR and RMDIR
	* final
	- Solved a problem with READ type mismatches (e.g. READ a with 
	  the current DATA expression a string).

0.2.6:
	- New sys_edit() for Win32 by Gary Lake.
	- Modified REF implementation so that array element can be a REF
	  parameter
	- Removed irritating bug in allocating new floating point exp
	  element memory that messed up the memory (GETEXP(double) in
	  pars_exp_float).
	- Solved signedness problem in characters > 127
	  (e.g. print ord(chr$(129)) now prints 129 as expected)
	- Now allowed for substring specification like
	  a$(:n#:). This resulted in changes to the SAVE format that I
	  think are upward compatible from previous releases.
	- There now exists a one line version of REPEAT:
	       100 REPEAT a$:+"x" UNTIL LEN(A$)=20
	  This changed the SAVE format (again... :-/ )
	- Added UPPER$(<stringexp>) and LOWER$(<stringexp>)
	* Declared 0.2.6-pre1
	- Overhauled the RND function. Now does:
	  RND 
	  RND(10)
	  RND(-10,10)
	* Declared 0.2.6-pre2
	- Added RETRY (in HANDLER part of ENDTRAP). This lead to the
	  first "goto" statement in the OpenComal source! :-)
	  And, guess what, the SAVE format changed because of adding a
	  new keyword...  :-(
	- Added FRAC and ROUND.

0.2.7:
	- Started implementing the MODULE concept. See "whitepaper1.txt"
	  in the doc/ directory for more information.
	- Changed the meaning of "END" to remove the complete variable
	  environment. Also made "END" executable as a command (so as to
	  end an interrupted program".
	- Changed the OpenComal prompt to "(halted)$ " if the
	  interpreter is in HALTED state (program was stopped but could
	  be continued).
	- Added the STATIC command (also see "whitepaper1.txt".)